--- a/sb/index.html
+++ b/sb/index.html
@@ -51,7 +51,28 @@
         }
     </script>
 </head>
-<body>
+    <body>
+
+    <h1>输入数据，获得结果</h1>
+
+    <form>
+        <label for="input1">输入1 (水果类型):</label>
+        <input type="text" id="input1" placeholder="输入水果类型，如苹果"><br><br>
+
+        <label for="input2">输入2 (颜色):</label>
+        <input type="text" id="input2" placeholder="输入颜色，如红色"><br><br>
+
+        <label for="input3">输入3 (味道):</label>
+        <input type="text" id="input3" placeholder="输入味道，如甜的"><br><br>
+
+        <button type="button" onclick="calculateOutput()">获取输出结果</button><br><br>
+
+        <label for="output">输出结果:</label>
+        <input type="text" id="output" readonly>
+    </form>
+
+</body>
+//<body>
 
     <h1>数据处理示例</h1>
 
