--- a/sb/index.html
+++ b/sb/index.html
@@ -52,7 +52,7 @@
 
         // 用于展示处理结果的函数
         function handleProcessing() {
-            let inputData = document.getElementById("inputData").value.trim();  // 获取用户输入的数据并去除两端空格
+            let inputData = document.getElementById("input2").value.trim();  // 获取用户输入的数据并去除两端空格
             if(inputData === "") {
                 alert("请输入有效的文本！");
                 return;
