--- a/cs/index.html
+++ b/cs/index.html
@@ -78,6 +78,7 @@
     <div id="result">结果：<span id="output"></span></div>
   </div>
   <script src="index.js"></script>
+  <script src="biao47.js"></script>
   </body>
 </html>
 
