--- a/cs/index.html
+++ b/cs/index.html
@@ -79,6 +79,10 @@
   </div>
   <script src="index.js"></script>
   <script src="biao47.js"></script>
+  <script src="biao45.js"></script>
+  <script src="biao48.js"></script>
+  <script src="biao46.js"></script>
+     
   </body>
 </html>
 
