--- a/zh/index.html
+++ b/zh/index.html
@@ -82,6 +82,7 @@
   <script src="biao45.js"></script>
   <script src="biao48.js"></script>
   <script src="biao46.js"></script>
+ <script src="shijian45.js"></script>
      
   </body>
 </html>
