--- a/dl/index.html
+++ b/dl/index.html
@@ -55,12 +55,18 @@
         .login-btn:hover {
             background-color: #0056b3;
         }
+        .error-message {
+            color: red;
+            font-size: 14px;
+            margin-top: 10px;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
     <div class="login-container">
         <h2>登录</h2>
-        <form action="/login" method="post">
+        <form id="loginForm">
             <div class="form-group">
                 <label for="username">用户名</label>
                 <input type="text" id="username" name="username" placeholder="请输入用户名" required>
@@ -69,8 +75,44 @@
                 <label for="password">密码</label>
                 <input type="password" id="password" name="password" placeholder="请输入密码" required>
             </div>
-            <button type="submit" class="login-btn">登录</button>
+            <button type="button" class="login-btn" onclick="validateLogin()">登录</button>
+            <div id="error-message" class="error-message"></div>
         </form>
     </div>
+
+    <script>
+        // 使用对象存储多个账号和密码
+        const users = {
+            "admin": "123456",
+            "user1": "password1",
+            "user2": "password2"
+        };
+
+        function validateLogin() {
+            const username = document.getElementById("username").value.trim();
+            const password = document.getElementById("password").value.trim();
+            const errorMessage = document.getElementById("error-message");
+
+            // 清空错误信息
+            errorMessage.textContent = "";
+
+            // 验证用户名和密码
+            if (username === "" || password === "") {
+                errorMessage.textContent = "用户名和密码不能为空！";
+                return;
+            }
+
+            // 检查用户是否存在，密码是否正确
+            if (!users[username] || users[username] !== password) {
+                errorMessage.textContent = "用户名或密码错误！";
+                return;
+            }
+
+            // 登录成功的处理
+            alert("登录成功！");
+            // 可重定向到其他页面，例如主页
+            window.location.href = "dashboard.html";
+        }
+    </script>
 </body>
 </html>
