--- a/dl/dashboard.html
+++ b/dl/dashboard.html
@@ -54,15 +54,20 @@
     </div>
 
     <script>
-        // 如果有用户名信息，可以显示用户名
-        const username = localStorage.getItem("username"); // 假设登录后用户名存在localStorage
-        if (username) {
-            document.querySelector("h2").textContent = `恭喜，${username}，登录成功！`;
+        // 检查用户是否登录
+        const username = localStorage.getItem("username");
+
+        // 如果没有登录，跳转到登录页面
+        if (!username) {
+            window.location.href = "index.html";  // 这里假设登录页面是 login.html
         }
+
+        // 显示用户名
+        document.querySelector("h2").textContent = `恭喜，${username}，登录成功！`;
 
         function goToDashboard() {
             // 跳转到系统首页（根据实际需求修改）
-            window.location.href = "dashboard.html";
+            window.location.href = "dashboard.html";  // 这里假设首页是 dashboard.html
         }
     </script>
 </body>
