--- a/dl/welcome.html
+++ b/dl/welcome.html
@@ -44,6 +44,12 @@
         .btn:hover {
             background-color: #0056b3;
         }
+        .logout-btn {
+            background-color: #f44336;
+        }
+        .logout-btn:hover {
+            background-color: #e53935;
+        }
     </style>
 </head>
 <body>
@@ -51,6 +57,7 @@
         <h2>恭喜，登录成功！</h2>
         <p>欢迎回来，您已成功登录到系统。</p>
         <button class="btn" onclick="goToDashboard()">进入首页</button>
+        <button class="btn logout-btn" onclick="logout()">退出登录</button>
     </div>
 
     <script>
@@ -68,6 +75,14 @@
         function goToDashboard() {
             // 跳转到首页，修改为实际的首页链接
             window.location.href = "dashboard.html";
+        }
+
+        function logout() {
+            // 清除登录信息
+            localStorage.removeItem("username");
+
+            // 跳转回登录页面
+            window.location.href = "login.html";
         }
     </script>
 </body>
