--- a/xm/shouye.html
+++ b/xm/shouye.html
@@ -3,14 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clickable Boxes</title>
+  <title>Responsive Navigation Bar</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <a href="https://example.com" class="box" target="_blank">Box 1</a>
-    <a href="https://example.org" class="box" target="_blank">Box 2</a>
-    <a href="https://example.net" class="box" target="_blank">Box 3</a>
-  </div>
+  <nav class="navbar">
+    <div class="logo">MyWebsite</div>
+    <ul class="nav-links">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#portfolio">Portfolio</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+    <div class="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </nav>
+
+  <section id="home">
+    <h1>Welcome to My Website</h1>
+  </section>
 </body>
 </html>
