--- a/xm/shouye.html
+++ b/xm/shouye.html
@@ -26,5 +26,14 @@
   <section id="home">
     <h1>Welcome to My Website</h1>
   </section>
+  <script>
+  const hamburger = document.querySelector('.hamburger');
+  const navLinks = document.querySelector('.nav-links');
+
+  hamburger.addEventListener('click', () => {
+    navLinks.classList.toggle('active');
+  });
+</script>
+
 </body>
 </html>
